sample-deployment-k8s-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: test-blue-green
  labels:
    project: test-blue-green
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubectldeploy-test-1
  namespace: test-blue-green
  labels:
    app: kubectldeploy-test
    version: version1
    env: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubectldeploy-test
      env: green
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kubectldeploy-test
        version: version1
        env: green
    spec:
      containers:
        - name: kubectldeploy-test-1
          image: kubedeploy/test:version1
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 100m

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubectldeploy-test-2
  namespace: test-blue-green
  labels:
    app: kubectldeploy-test
    version: version2
    env: blue
spec:
  replicas: 0
  selector:
    matchLabels:
      app: kubectldeploy-test
      env: blue
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: kubectldeploy-test
        version: version2
        env: blue
    spec:
      containers:
        - name: kubectldeploy-test-2
          image: kubedeploy/test:version2
          imagePullPolicy: "IfNotPresent"
          ports:
            - name: http
              protocol: TCP
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 100m

---
apiVersion: v1
kind: Service
metadata:
  namespace: test-blue-green
  name: kubectldeploy-test
  labels:
    app: kubectldeploy-test
    version: latest
spec:
  selector:
    app: kubectldeploy-test
    env: green
  ports:
    - name: web
      protocol: TCP
      port: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubectldeploy-test-ingress-route
  namespace: test-blue-green
  labels:
    app: kubectldeploy-test
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`kubectldeploy-test.com`)
    kind: Rule
    services:
    - name: kubectldeploy-test
      port: 80
